# umbrella

./: .gitignore  LICENSE  README.md
clj101/: Makefile  README.md  foo.clj
cog/: Makefile  pyproject.toml
cog/src/: bar.sql  foo.sql
ev/: Pipfile  pedal.py
go101/: Makefile  README.md  go.mod
go101/basic/: binsearch.go  vars.go
go101/learn/: go.mod
gql/: Pipfile  README.md
gql/api/: app.py  schema.py
griffe-and-docs/: README.md  mkdocs.yml  pyproject.toml
griffe-and-docs/docs/: index.md
griffe-and-docs/src/griffe_and_docs/: __init__.py  other.py
kafka-test/: README.md  compose.yaml  pyproject.toml
kafka-test/src/: consumer.py  producer.py
kube/: .envrc  Makefile  shell.nix
kube/100/: nginx.yaml
kube/200/: bad-release.yaml  dep-surge-and-unavailable.yaml  deployment.yaml  healthy-check.yaml  new-version.yaml  scale-to-5.yaml
kube/300/: deployment.yaml  service.yaml
loafer-intro/: README.md  awscli.md  goaws.md  requirements.txt  test_user.json
marimo-test/: pyproject.toml
marimo-test/src/marimo_test/: __init__.py  cli.py
mockery/: README.md  mock_101.py  mock_bad.py  mock_feedback.py  mock_good.py
np/: Pipfile  big-o.ipynb  entropy.ipynb  sample-dj-settings.py
pedal/: pedal.py  pyproject.toml
render-pdf/: Makefile  README.md  requirements.txt  run.py
rust101/: README.md
salt-ssh/: Saltfile  requirements.txt
tf/: Pipfile  README.md  main.tf
training/: README.md  game_of_life.py
usb-inputs/: README.md  button_remap_poc.py
wormhole/: wormhole.py
yapf-styling/: README.md  check.sh  comments.py  indents.py  setup.cfg
(+123 files in other folders)
