[project]
name = "griffe-and-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "griffe>=1.5.1",
    "griffe-tui>=1.0.0",
    "mkdocstrings-python>=1.12.2",
    "mkdocs>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
